[package]
name = "fotosort"
version = "0.2.1"
authors = ["phil0x2e <ph-ketteni@t-online.de>"]
edition = "2018"
description = "A tool to sort a bunch of fotos into different folders"
readme = "README.md"
repository = "https://github.com/phil0x2e/FotoSort-rs"
license-file = 'LICENSE'
license = 'GPL-3.0-or-later'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
clap = "2.33"
terminal_size = "0.1"
image_window = { git = "https://github.com/phil0x2e/image_window" }
